# DAGPipe

./: README.md  experiment_engine.py  pyproject.toml
orchestration/: pyproject.toml
orchestration/app/: backends.py  celery_app.py  conf.py  worker.py
results/experiments/admission_cor/: admission_cor.csv
results/experiments/admission_cor/BIC_EXACT_SEARCH/: metrics.csv  predicted_dag.csv  true_dag.csv
results/experiments/admission_cor/FCI/: metrics.csv  predicted_dag.csv
results/experiments/admission_cor/GIN/: metrics.csv  true_dag.csv
results/experiments/admission_cor/PC/: metrics.csv  predicted_dag.csv  true_dag.csv
results/experiments/admission_cor/RESIT/: metrics.csv  predicted_dag.csv  true_dag.csv
results/experiments/admission_cor/effect/ed_2_ex/BIC_EXACT_SEARCH/: summary.csv
results/experiments/churn/BIC_EXACT_SEARCH/: metrics.csv  predicted_dag.csv
results/experiments/churn/FCI/: metrics.csv
results/experiments/churn/PC/: metrics.csv  predicted_dag.csv
results/experiments/churn/RESIT/: metrics.csv  predicted_dag.csv
results/experiments/confounded_selection/: confounded_selection.csv
results/experiments/confounded_selection/BIC_EXACT_SEARCH/: _true_dag.csv  metrics.csv  predicted_dag.csv
results/experiments/confounded_selection/FCI/: metrics.csv
results/experiments/confounded_selection/PC/: metrics.csv  predicted_dag.csv  true_dag.csv
runner/: Dockerfile  pyproject.toml
runner/app/: calculations.py  cli.py  conf.py  experiment_runner.py  io.py  models.py  treatment_runner.py  utils.py
(+126 files in other folders)
