[tool.poetry]
name = "experiment-engine"
version = "0.1.0"
description = ""
authors = ["XivC <artemd55131@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.42.15"
celery = "^5.6.0"
redis = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
