[tool.poetry]
name = "pipeline-runner"
version = "0.1.0"
description = ""
authors = ["XivC <artemd55131@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.5"
pandas = "^2.3.3"
matplotlib = "^3.10.7"
causal-learn = "^0.1.4.3"
graphviz = "^0.21"
lingam = "^1.12.1"
pandas-stubs = "~=2.3.3"
pydantic = "^2.12.5"
s3 = "^3.0.0"
boto3 = "^1.42.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
